--- a/index.html
+++ b/index.html
@@ -18,14 +18,16 @@
     <div class="container">
         <div class="row justify-content-center mt-5">
             <div class="col-6 d-flex flex-column">
-                <h1 class="mx-auto">Weather</h1>
-                <label for="city" class="form-label text">City</label>
-                <input type="text" id="city" class="form-control mt-2" placeholder="please enter city">
-                <button id="search-btn" class="btn btn-primary mt-5 mx-auto">Search</button>
+                <h1 class="mx-auto my-5">Weather</h1>
+
+                <label for="city" class="form-label mb-3">City</label>
+                <input type="text" id="city" class="form-control" placeholder="Please enter city">
+                    
+                <button id="search-btn" class="btn btn-primary mt-3 mx-auto">Search</button>
             </div>
         </div>
 
-        <div id="weather-info">
+        <div id="weather-info" class="row mt-5">
             <!--weather info goes here-->
         </div>
     </div>
